--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,7 +8,7 @@ copyright: (c) 2020 Miro Adamy
 nav:
     - Home: index.md
     - Notes: 
-        - 01: section-01.md
+        - 01 - Intro: section-01.md
         - 02: section-02.md
         - 03: section-03.md
     - Demo:
