--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -6,7 +6,7 @@ tasks:
       pip install --upgrade pip
       pip install mkdocs 'mkdocs-minify-plugin>=0.2' 
       pip install 'mkdocs-git-revision-date-localized-plugin>=0.4' 'mkdocs-awesome-pages-plugin>=2.2.1' 'mkdocs-macros-plugin'
-      pip install mkdocs-material
+      pip install mkdocs-material mkdocs-material-extensions
       gp sync-done pip-inst
     command: |
       echo Ready to develop
