--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,7 +12,7 @@ nav:
         - 02 - Events, Schedulers, Filters: section-02.md
         - 03 - Env variables, Encryption: section-03.md
         - 04 - Using Strategy, Matrix and Docker: section-04.md
-        - 05: section-05.md
+        - 05 - CI/CD Workflow to automate test and deployment: section-05.md
     - Demo:
         - Markdown: markdown-demo.md
         - Macros: macros-demo1.md
